# proxly

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  justfile  testservice.Dockerfile
crates/proxly-testservice/: Cargo.toml
crates/proxly-testservice/src/: main.rs
provisioner/: Dockerfile  provision.sh
src/: authly.rs  egress.rs  ingress.rs  ip_util.rs  lib.rs  main.rs  state.rs
testfiles/k8s/: authly-test-values.yaml  ts-proxied.yaml  ts-unproxied.yaml
testfiles/k8s/authly-documents/: 0_setup.toml
testfiles/k8s/charts/: authly-0.0.5.tgz  authly-0.0.6.tgz  openbao-authly-dev-0.0.2.tgz
