[package]
name = "proxly"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
arc-swap = "1"
authly-client = { workspace = true, features = ["rustls_023"] }
authly-common = { workspace = true, features = ["mtls_server"] }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
hickory-resolver = "0.24"
mimalloc = "0.1.43"
nix = { version = "0.29", features = ["net", "socket"] }
rustls = { version = "0.23", default-features = false }
thiserror = "2"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
] }
tokio-rustls = { version = "0.26", default-features = false }
tokio-util = { version = "0.7" }
tower-server = { version = "0.3", features = ["signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
] }
users = "0.11"

[workspace]
members = ["crates/proxly-testservice"]
resolver = "2"

[workspace.dependencies]
authly-client = { git = "https://github.com/protojour/authly-lib.git" }
authly-common = { git = "https://github.com/protojour/authly-lib.git" }
